feat: Implement credit risk explanation service using Spring AI, RAG, and prompt engineering.